# archi_reports

./: .gitignore  LICENSE  README.md  doc_dir.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: dev-manual.md  exporter-manual.md
src/archi_reports/analyzers/: archimate.py  base.py
src/archi_reports/exporters/: base.py  console.py  csv.py
src/archi_reports/models/: process.py
src/archi_reports/reports/: base.py  component_services.py  process_status.py
tests/: conftest.py  test_unit01.py
